# EC-Agent

./: .gitignore  .gitmodules  README.md  go.mod  go.sum  log_non_ec_4g.txt  main.go
Agent/: .gitignore  Agent  CMakeCache.txt  CMakeLists.txt  Dockerfile  Handler.cpp  Handler.h  Makefile  Server.cpp  Server.h  cmake_install.cmake  main.cpp  result.txt
Agent/proto/: CMakeLists.txt  Makefile  cmake_install.cmake  msg.pb.cc  msg.pb.h  msg.proto
DeployGRPC/: deploy.pb.go  deploy.proto  deploy_grpc.pb.go
containerUpdateGrpc/: updateContainer.pb.go  updateContainer.proto  updateContainer_grpc.pb.go
grpc/: agent.pb.go  agent.proto  agent_grpc.pb.go
legacy/Agent/: CMakeLists.txt  Handler.h  Server.h
msg/: msg.pb.go  msg.proto
